--- a/templates/walls.html
+++ b/templates/walls.html
@@ -23,7 +23,7 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search for a Wall" name="name" style="width:150px;">
         </div>
-        <input type="submit" name="b" class="btn btn-success" value="search">
+        <input type="submit" name="b" class="btn btn-success" value="Search">
 	<input type="submit" name="b" class="btn btn-info" value="Create a Wall!">
       </form>
 	</span>
@@ -41,8 +41,30 @@
 <div class="container-fluid">
 
 <h1>Public Bathroom</h1>
+  
+{% for key in walls %}
 
 
+<h3> {{key}} </h3>
+<div class="list-group">
+  {% for w in walls[key] %}
+  <a href="/wall/{{w['wall_id']}}" class="list-group-item">
+    <span class="badge" style="background-color: #088A29;">{{w['up_votes']}}</span>
+    <h4 class="list-group-item-heading">{{w['name']}}</h4>
+    <p class="list-group-item-text">{{w['description']}}</p><br>
+    <p>Tags: {% for tag in w['tags'] %}
+      <span style="background-color: #0B3861;" class="label label-default">{{tag}}</span> 
+      {% endfor %}
+    </p>
+  </a>
+  {% endfor %}
+</div>
+{% endfor %}
+
+
+
+  
+</div>
 
 
 
