--- a/templates/create.html
+++ b/templates/create.html
@@ -17,7 +17,7 @@
   <div class="container">
     <ul class="nav navbar-nav">
 	<li><a href="/home">Home <span class="sr-only">(current)</span></a></li>
-	<li><a href="/messages">Messages <span class="sr-only">(current)</span></a></li>
+	<li><a href="/inobx">Messages <span class="sr-only">(current)</span></a></li>
 	<li><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
     </ul>
 	<span style="line-height:5px;">
