--- a/templates/stall.html
+++ b/templates/stall.html
@@ -15,7 +15,7 @@
   <div class="container">
     <ul class="nav navbar-nav">
 	<li><a href="/home">Home <span class="sr-only">(current)</span></a></li>
-	<li><a href="/messages">Messages <span class="sr-only">(current)</span></a></li>
+	<li><a href="/inbox">Messages <span class="sr-only">(current)</span></a></li>
 	<li><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
     </ul>
 	<span style="line-height:5px;">
