--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -18,25 +18,25 @@
                             <li class="active"><a href="/inbox">Messages <span class="sr-only">(current)</span></a></li>
                             <li><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
                         </ul>
-                        <span style="line-height:5px;">
-                            <form class="navbar-form navbar-left" role="search">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Search for a Wall" name="name" style="width:150px;">
-                                        </div>
-                                <input type="submit" name="b" class="btn btn-success" value="search">
-                                    <input type="submit" name="b" class="btn btn-info" value="Create a Wall!">
-                                        </form>
-                        </span>
-                        <span style="line-height:5px;">
-                            <form class="navbar-form navbar-right" method="POST">
-                                <p class="navbar-text">Logged in as Pooper123 {{ session['username'] }}</p>
-                                <input type="submit" name="b" class="btn btn-danger" value="Log Out">
-                                    <input type="submit" name="b" class="btn btn-primary" value="Settings">
-                                        </form>
-                        </span>
-                    </div>
-                </nav>
-    </head>
+		<span style="line-height:5px;">
+	<form class="navbar-form navbar-left" role="search" method="POST">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search Wall or User" name="name" style="width:150px;">
+        </div>
+        <input type="submit" name="b" class="btn btn-success" value="Search Wall">
+	<input type="submit" name="b" class="btn btn-success" value="Search User">
+	<input type="submit" name="b" class="btn btn-info" value="Create a Wall!">
+      </form>
+	</span>
+    <span style="line-height:5px;">
+          <form class="navbar-form navbar-right" method="POST">
+	    <p class="navbar-text">Logged in as {{ session['first_name'] }} {{ session['last_name']}}</p>
+            <input type="submit" name="b" class="btn btn-danger" value="Log Out">
+          </form>
+	</span>
+  </div>
+</nav>
+</head>
     
     <body style="padding-top:70px">
     <div class="container-fluid">
