--- a/templates/messages.html
+++ b/templates/messages.html
@@ -44,8 +44,8 @@
 <body style="padding-top:70px">
 <div class="container-fluid">
 
-
-</div>
+<div class="row">
+<div class="col-lg-8">
 
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     
@@ -54,27 +54,63 @@
     To:<input name="usr" id="usr" type="text" value="example@email.com">
     {% else %}
     {% set rec = conversation['tag'] %}
-    To: {% for n in rec %}{{n}}, {% endfor %}
+    <h4>Conversation with {% for n in rec %}{{n}}, {% endfor %}
     {% endif %}
-      <div style="overflow:scroll; height:200px; width: 200px; border:1px solid black; scrollTop:scrollHeight" id="block">
-          <p>
+      <div style="overflow:scroll; height:80%; width: 100%; border:1px solid black; scrollTop:scrollHeight; padding-left:5px; background-color: #252E33;" id="block">
           {% if conversation != 0 %}
           {% set messages = conversation['messages']  %}
           {% for message in messages %}
-          
-          {{message[0]}}: {{message[2]}} <br>
-          
+          {% if message[0] == session['first_name'] %}
+          <h5 style="color: #0AF7FF;">{{message[0]}}:</h5>
+	  <h5>{{message[2]}}</h5>
+	  {% else %}
+           <h5 style="color: red;">{{message[0]}}:</h5>
+	  <h5>{{message[2]}}</h5>
+	  {% endif %}
+		<hr>
           {% endfor %}
           {% endif %}
-          </p>
+        
       </div>
 
+<br>
 
 
-      <input name="textbox1" id="textbox1" type="text">
+
+      <input name="textbox1" id="textbox1" type="text" class="form-control" style="width:90%;">
       <input name="b" onclick="send(document.getElementById('textbox1').value)" type="submit" value="send">
     </form>
 
+</div>
+<div class="col-lg-4">
+<div class="jumbotron jumbotron" style="height:100%; background-color: #0B3861; overflow: scroll;">
+		<div class="container-fixed-right">
+		<div class="row">
+		<form type="POST">
+		<div class="col-sm-9">
+		<input type="text" class="form-control" name="friend" placeholder="Friend Email">
+		</div>
+		<div class="col-sm-2">
+		<input type="submit" name="b" value="Add Friend" class="btn btn-success">
+		</div></div>
+		</div>
+		{% if message is defined %}
+		<div class="alert alert-danger alert-dismissable">{{ message }}</div>
+		{% endif %}
+		<center><h2>Ya Boys</h2></center>
+		{% for friend in session['friends'] %}
+		{% if friend['logged_in'] %}
+		<span class="glyphicon glyphicon-ok-circle" style="color: green;"></span>
+		{% else %}
+		<span class="glyphicon glyphicon-remove-sign" style="color: red;"></span>
+		{% endif %}
+		<a href="messages/{{ friend['email'] }}"> {{friend['first_name']}} {{friend['last_name']}}</a><br>
+		{% endfor %}
+		</div>
+		</div>
+	</div>
+
+</div></div>
     <script src="../message.js"></script>
         </body>
 </html>
