--- a/templates/create.html
+++ b/templates/create.html
@@ -18,7 +18,7 @@
     <ul class="nav navbar-nav">
 	<li><a href="/home">Home <span class="sr-only">(current)</span></a></li>
 	<li><a href="/inobx">Messages <span class="sr-only">(current)</span></a></li>
-	<li><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
+	<li><a href="/walls/pop">Walls <span class="sr-only">(current)</span></a></li>
     </ul>
 	<span style="line-height:5px;">
 
